# career-ops-kr

./: .gitignore  AGENTS.md  PLAN.md  PROGRESS.md  README.md  design-guidelines.md  pyproject.toml
.codex/: config.toml
config/: live-smoke-targets.yml  portals.kr.example.yml  profile.example.yml  scorecard.kr.yml  states.yml
data/: applications.md  pipeline.md
docs/: architecture.md  portal-integration-strategy.md  scoring-kr.md  workflows.md
examples/: career-description-context.backend.example.json  career-description-context.backend.ko.example.json  career-description-context.data-ai.example.json  career-description-context.data-ai.ko.example.json  career-description-context.data-platform.example.json  career-description-context.data-platform.ko.example.json  career-description-context.platform.example.json  career-description-context.platform.ko.example.json  resume-context.backend.example.json  resume-context.backend.ko.example.json  resume-context.data-ai.example.json  resume-context.data-ai.ko.example.json  resume-context.data-platform.example.json  resume-context.data-platform.ko.example.json  resume-context.example.json  resume-context.platform.example.json  resume-context.platform.ko.example.json
prompts/: company-research.md  evaluate-job.md  generate-resume-en.md  generate-resume-ko.md  outreach-message.md
templates/: career-description-en.html  career-description-ko.html  resume-en.html  resume-ko.html
tests/: __init__.py  test_career_description.py  test_cli.py  test_examples.py  test_jobs.py  test_pipeline.py  test_portals.py  test_research.py  (+6 more)
(+82 files in other folders)
